<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_Alarm" Id="{8d00be9f-5e60-4b9b-b963-afd87d633f42}">
    <Declaration><![CDATA[VAR_GLOBAL
		gbAlarm_NoStopAlarm,
		gbAlarm_StopAlarm ,
		gbAlarm_ShowlampOn ,
		gbAlarm_FalshLamp ,
		gbAlarm_NeedPause ,
		gbAlarm_ExtruderOff ,
		gbAlarm_HydraulicOff ,
		gbAlarm_HeatingOff ,
		gbAlarm_FillingOff ,
		gbAlarm_ServoMotorOff ,
		gbAlarm_AutoRunOff ,
		gbAlarm_AlarmAction1 ,
		gbAlarm_AlarmAction2 ,
		gbAlarm_AlarmAction3 ,
		gbAlarm_AlarmAction4 ,
		gbAlarm_AlarmAction5 ,
		gbAlarm_AlarmAction6 ,
		gbAlarm_AlarmAction7 ,
		gbAlarm_AlarmAction8	:			BOOL;
		
	  	Alm_ActiveAlarmNum:      DINT;(*当前激活警报的数量*)
	 	Alm_HistoryAlarmNum:     DINT;(*历史警报的数量*)
	 	AlarmActionArray:		 ARRAY [cnAlarmFirst..cnAlarmLast] OF Alm_AlarmType;(*记录所有警报状态的数组*)
		AlarmActiveArray:		 ARRAY [cnAlmActiveFirst..cnAlmActiveLast] OF Alm_AlarmHistoryType;(*记录已激活警报状态的数组*)
		fbSetAlarm:				 ARRAY[cnAlarmFirst..cnAlarmLast] OF FB_SetAlarm;

	  	Alm_bHMIClearHistory:   BOOL;(*清除历史报警*)
		Alm_bBtReset:			BOOL;//报警清除按钮
	  	Alm_iHMIAlarmID:       	DINT;(*当前报警id,给循环显示用*)
		tActSystemTime: 		TIMESTRUCT;//当前系统时间
		gwsActEventMsg:			WSTRING(255);//当前显示的报警信息，跑马灯形式
		gsWriteToLog:			STRING(255);//当前需要添加到报警历史文件的信息
		CurrentLanguage:		STRING;
		
END_VAR

VAR_GLOBAL PERSISTENT(*断电保存型变量,历史报警*)
	   	AlarmHistoryArray :		ARRAY [cnAlmHistoryFirst..cnAlmHistoryLast] OF Alm_AlarmHistoryType;(*记录历史警报状态的数组*)
END_VAR

(*
-------------------------------------在调用的程序里请定义如下变量:----------------------------------------------
*)
VAR_GLOBAL CONSTANT
		cnAlarmFirst:                             	DINT:=1;(*报警的最小id号，默认为1，不需改动*)
		cnAlarmLast:                             	DINT:=1000;(*报警的最大id号*)
		cnAlmActiveFirst:                       	DINT:=1;(*当前激活的警报最小id号，默认为1，不需改动*)
		cnAlmActiveLast:                       		DINT:=1000;(*当前激活的警报最大id号*)
		cnAlmHistoryFirst:                    		DINT:=1;(*历史警报最小id号，默认为1，不需改动*)
		cnAlmHistoryLast:                   	 	DINT:=1000;(*历史警报最大id号*)
END_VAR

]]></Declaration>
  </GVL>
</TcPlcObject>